tests/NormalTests/paczka1/small_fuzzy/80493228.err
Error in line 2: TpIQIklVs1 S223 99,6
Error in line 7: ?S^^2
Error in line 6: T3S S992 34,2
Error in line 3: TpIQIklVs1 A228 69,7
Error in line 10: T3S S151 17,0
